--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,40 @@
 </head>
 
 <body>
-  <div id="app">
+  <div id="app" @keydown.esc="closeForm">
     <div class="header">
       <h1>Ticket System</h1>
+      <p v-if="user">Welcome {{user.username}}<br><a href="#" @click="logout">Logout</a></p>
+      <p v-else><a href="#" @click="toggleForm">Register or Login</a></p>
     </div>
+
+    <transition v-if="showForm" name="modal">
+      <div class="modal-mask">
+        <div class="modal-wrapper">
+          <div class="modal-container">
+
+            <div class="modal-header">
+              <h1 class="modal-title">Register or Login</h1>
+            </div>
+            <div class="modal-body">
+              <p v-if="error" class="error">{{error}}</p>
+              <label>Username</label>
+              <br>
+              <input v-model="username">
+              <br>
+              <label>Password</label>
+              <br>
+              <input type="password" v-model="password">
+            </div>
+            <div class="modal-footer">
+              <button @click="register" type="button">Register</button>
+              <button @click="login" type="button" class="other">Login</button>
+              <button @click="toggleForm" type="button" class="close">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </transition>
 
     <div class="content">
       <form @submit.prevent="addTicket">
